# liminal

./: Cargo.toml  README.md  TIMING_MIXIN_ANALYSIS.md  TIMING_MIXIN_COMPLETION.md
config/: config.toml
config/examples/: config_advanced_rule.toml  config_led_control_with_else.toml  config_mqtt_sim.toml  config_rule_filter.toml  config_rule_test.toml  config_timing.toml
sim/: led_control.sh  message_gen_generic.sh  message_gen_mpu6500.sh
src/: main.rs  pipeline.rs  registry.rs
src.old/: main.rs
src.old/aggregation/: fusion.rs  mod.rs
src.old/config/: loader.rs  mod.rs  validation.rs
src.old/core/: mod.rs
src.old/input/: mod.rs  mqtt.rs  simulated.rs
src.old/logging/: console.rs
src.old/sink/: log.rs  mod.rs
src.old/transform/: mod.rs  passthrough.rs  threshold.rs
src/aggregation/: fusion.rs  mod.rs
src/config/: field.rs  loader.rs  mod.rs  params.rs  schema.rs  traits.rs  types.rs  validation.rs
src/core/: channel.rs  context.rs  message.rs  mod.rs  pipeline.rs  registry.rs  stage.rs  time.rs  timing.rs  timing_mixin.rs
src/input/: mod.rs  mqtt.rs  simulated.rs
src/logging/: mod.rs
src/message/: mod.rs
src/processors/: factory.rs  fusion.rs  log.rs  lowpass.rs  mod.rs  processor.rs  scale.rs  simulated.rs
src/processors/aggregator/: fusion.rs  mod.rs
src/processors/common/: condition_utils.rs  (+4 more)
src/sink/: log.rs  mod.rs
src/stages/: factory.rs  fusion.rs  log.rs  lowpass.rs  mod.rs  scale.rs  simulated.rs  stage.rs
src/transform/: mod.rs  passthrough.rs  simple.rs  threshold.rs
test/: message_gen.sh  mosquitto_esp32.conf
(+15 files in other folders)
