[package]
name = "liminal"
version = "0.1.0"
edition = "2024"

[dependencies]
toml = "0.5.8"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1.88"
futures = "0.3.31"
anyhow = "1.0.98"
lazy_static = "1.5.0"
flume = "0.11.1"
