[package]
name = "liminal"
version = "0.1.0"
authors = ["Keith Bugeja <keith.bugeja@um.edu.mt>"]
description = "A framework for building data processing pipelines"
edition = "2024"

[dependencies]
toml = "0.9.3"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1.88"
futures = "0.3.31"
anyhow = "1.0.98"
flume = "0.11.1"
rand = "0.9.1"
rand_distr = "0.5.1"
rumqttc = "0.24.0"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22.1"
clap = { version = "4.5", features = ["derive"] }
evalexpr = "12.0.2"
regex = "1.11"